--- a/html/change.html
+++ b/html/change.html
@@ -4,14 +4,14 @@
     <title>Signup for Brokfree</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="login.css" type="text/css">
+    <link rel="stylesheet" href="../css/login.css" type="text/css">
 </head>
 
-<body onload="document.body.classList.add('loaded')">
+<body onload="document.body.classList.add('loaded')" style = "background-color: darkseagreen">
     <div class="container">
         <div class="form">
             <div class="tab-content">
-                <form action="change.php" method="POST">
+                <form action="../php/change.php" method="POST">
                     <h1>Change Password</h1>
                     <div class="field-wrap">
                         <label>
