--- a/html/thank-you.html
+++ b/html/thank-you.html
@@ -11,13 +11,13 @@
             to {opacity:1;}
         }
     </style>
-    <body style="background-color: rgb(83, 2, 83)">
+    <body style = "background-color: rgb(83, 2, 83);">
         <div class="container" style="margin:100px auto">
             <div class="jumbotron text-xs-center" style="padding:80px; background-color: rgba(19, 35, 47, .9); box-shadow: 0 4px 10px 4px rgba(207, 225, 238, 0.3); text-align:center;">
                 <h1 class="display-3">
                     <span style="color:white; font-weight: bold;"><?php echo $text;?></span>
                 </h1>
-                <a href="../php/homepage.php" style="text-decoration: none;">
+                <a href="../php/homepage.php" style="text-decoration: none; padding : 30px;">
                     <button class="btn btn-warning btn-lg" style="border-radius: 30px;">Continue to Homepage</button>
                 </a>
             </div>
