made slight changes in login and signup pages

--- a/html/signup.html
+++ b/html/signup.html
@@ -56,6 +56,8 @@
                         </div>
                         
                         <button type = "submit" name = "submit" class="button button-block">Get Started</button>
+
+                        <button class="button button-block" type = 'button' style = "padding : 10px; margin-top : 20px;"><a href = "../php/login.php" style = "color: white; padding : 3px; text-decoration : none;">Already have an account? Click here..</a></button>
                     </form>
                 </div>
             </div>
