--- a/html/view-home.html
+++ b/html/view-home.html
@@ -27,8 +27,15 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#aboutUs">About Us</a></li>
-                    <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <?php 
+                    if(isset($_SESSION['user'])){?>
+                    <li><a href="../php/view-profile.php"><span class='fas fa-user-circle' style = 'font-size:18px;'></span><?php echo " ".$_SESSION['user']?></a></li>
+                    <li><a href="../php/logout.php">Logout</a></li>
+                    <?php }
+                    else {?>
+                    <li><a href="../html/signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="../php/login.php"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <?php }?>
                 </ul>
             </div>
         </div>
