--- a/html/posting-ads.html
+++ b/html/posting-ads.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="posting-ads.css" type="text/css">
+    <link rel="stylesheet" href="../css/posting-ads.css" type="text/css">
 </head>
 
 <body onload="document.body.classList.add('loaded')">
